--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#spring.datasource.url=jdbc:h2:file:~/db
+#spring.datasource.username=sa
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
